Removed everything about logs
